--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
@@ -23,6 +25,7 @@
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-paper": "^5.10.4",
     "react-native-reanimated": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0"
