--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.0",
+    "expo-image-picker": "^14.5.0",
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-picker": "^7.0.0",
     "react-native-paper": "^5.10.4",
     "react-native-reanimated": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
