--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "temp",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"]
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -13,9 +17,9 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/datetimepicker": "^7.5.0",
     "@react-native-community/viewpager": "^5.0.11",
-    "@react-native-firebase/app": "^18.4.0",
-    "@react-native-firebase/auth": "^18.4.0",
-    "@react-native-firebase/firestore": "^18.4.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -28,7 +32,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.10.4",
+    "react-native-permissions": "^3.9.1",
     "react-native-reanimated": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
@@ -47,7 +53,6 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
