--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "rnpm": {
     "assets": [
-      "./assets/fonts"]
+      "./assets/fonts"
+    ]
   },
   "scripts": {
     "android": "react-native run-android",
@@ -20,11 +21,13 @@
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
-    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-native-firebase/storage": "^17.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "expo-image-picker": "^14.5.0",
     "firebase": "^10.3.1",
     "react": "18.2.0",
@@ -35,7 +38,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.10.4",
     "react-native-permissions": "^3.9.1",
-    "react-native-reanimated": "^3.5.1",
+    "react-native-reanimated": "^3.5.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.13.0"
